fix(bs-templates): better spacing in export modal

--- a/bs-templates/templates/modal/_export.scss
+++ b/bs-templates/templates/modal/_export.scss
@@ -88,22 +88,29 @@
 
   label, input[type="checkbox"] {
     font-weight: normal;
-    
   }
-
-  input[type="checkbox"] {
-    margin: 4px 2px;
-  }
-
+ 
   .checkbox-list {
     column-count: 2;
+  
+    input[type="checkbox"] {
+      margin: 4px 2px;
+    }
   }
   
   .checkbox-list label {
     margin-bottom: 5px;
     display: block;
   }
-  
+
+  .checkbox-container {
+    margin-top: 10px;
+  }
+
+  .spreadsheet-options {
+    margin-left: 24px;
+    margin-bottom: 5px;
+  }
 }
 
 .form-group > .input-group > .form-control.export {
